# icfpc2023

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  init.sh
.github/workflows/: cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  deploy-backend.yml  deploy-frontend.yml  prettier.yml
api/: Cargo.toml
api/src/: main.rs
backend/: Dockerfile  go.mod  go.sum  main.go
backend/internal/database/: database.go  schema.sql
backend/internal/httputil/: httputil.go
backend/internal/official/: official.go
backend/internal/server/: server.go
backend/internal/worker/: worker.go
chain-solver/: Cargo.toml  run.sh
chain-solver/src/: main.rs  solver.rs
chir-solver/: Cargo.toml  README.md
chir-solver/src/: main.rs
common/: Cargo.toml
common/src/: api.rs  board.rs  board_options.rs  evaluate.rs  f64.rs  float.rs  geom.rs  lib.rs  problem.rs  similarity.rs  vec2.rs
common/src/geom/: bounding_box.rs  ccw.rs  mod.rs  point.rs  polygon.rs  segment.rs  segment_intersection.rs  transform.rs
common/testcases/: p2_1458765625.json  p64_93147223.json
dp-solver/: Cargo.toml
dp-solver/src/: main.rs  solver.rs
evaluator/: Cargo.toml
evaluator/src/: main.rs
frontend/: Dockerfile  README.md  deploy.sh  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: Home.tsx  NavBar.tsx  ProblemInfo.tsx  VisualizerControl.tsx  layout.tsx  page.tsx
frontend/app/matrix/: page.tsx
frontend/app/mismatched-solutions/: MismatchedSolutionList.tsx  page.tsx
frontend/components/: HoverInfo.tsx  Problem.tsx  ProblemListBar.tsx  SolutionList.tsx  Visualizer.tsx  VisualizerAnnealer.tsx  VisualizerControl.tsx  api.ts  env.ts  evaluation_result.ts  number_format.ts  problems.ts  static_metadata.ts
frontend/components/lifegame/: LifeGameBoard.tsx
frontend/components/visualizer/: renderer.ts  viewport.ts
fuqinho-solver/: Cargo.toml
fuqinho-solver/record-history/quadratic-linear/: 1-100M-16604124030.json  1-10M-13560235340.json  1-11M-13627529890.json  1-12M-13729989560.json  1-13M-13697942500.json  1-14M-13926395670.json  1-15M-13874777180.json  1-16M-13918492570.json  1-17M-14139027060.json  1-18M-14141493480.json  1-19M-14119035030.json  1-1M-12259868350.json  1-20M-14199809070.json  1-21M-14386024190.json  1-22M-14288859650.json  1-23M-14481169490.json  1-24M-14550765820.json  1-25M-14597213150.json  1-26M-14715280780.json  1-27M-14716728480.json  1-28M-14646300720.json  1-29M-14771229440.json  1-2M-12807752220.json  1-30M-14883956240.json  1-31M-14847916540.json  1-32M-15001726010.json  1-33M-15112298760.json  1-34M-15125208000.json  1-35M-15223795900.json  1-36M-15263832660.json  1-37M-15317416470.json  1-38M-15333997410.json  1-39M-15345957120.json  1-3M-13053759610.json  1-40M-15414938340.json  1-41M-15493483830.json  1-42M-15489040760.json  1-43M-15511988010.json  1-44M-15535592200.json  1-45M-15617946480.json  (+60 more)
fuqinho-solver/record-history/with-gradient/: 1-100M-16488264680.json  1-10M-13181832160.json  1-11M-13318718560.json  1-12M-13304938420.json  1-13M-13337077870.json  1-14M-13594685540.json  1-15M-13343613520.json  1-16M-13515797600.json  1-17M-13649181340.json  1-18M-13688611950.json  1-19M-13569473560.json  1-1M-12046208450.json  1-1M-13243441950.json  1-1M-13577256310.json  1-1M-1970496310.json  1-20M-13746729700.json  1-21M-13622211350.json  1-22M-13891551130.json  1-23M-13840450650.json  1-24M-13794073480.json  1-25M-13816538940.json  1-26M-13800261500.json  1-27M-13976824600.json  1-28M-13958778420.json  1-29M-13976759520.json  1-2M-12715370040.json  1-2M-13904196230.json  1-2M-14294468410.json  1-30M-14045234050.json  1-31M-13992896140.json  1-32M-13907991550.json  1-33M-14065795640.json  (+73 more)
fuqinho-solver/src/: lib.rs  main.rs  sa.rs
greedy-solver/: Cargo.toml
greedy-solver/src/: main.rs  solver.rs
hooks/: pre-push
hungarian-solver/: Cargo.toml
hungarian-solver/src/: main.rs  solver.rs
nya-manual-annealer/: Cargo.toml
nya-manual-annealer/src/: main.rs
oka-solver/: Cargo.toml
oka-solver/src/: main.rs  solver.rs
problems/: 56.json  57.json  58.json  59.json  60.json  61.json  62.json  63.json  64.json  65.json  66.json  67.json  68.json  69.json  70.json  71.json  72.json  73.json  74.json  75.json  76.json  77.json  78.json  79.json  80.json  81.json  82.json  83.json  84.json  85.json  86.json  87.json  88.json  89.json  90.json
psh-fixup-volumes/: Cargo.toml
psh-fixup-volumes/src/: main.rs
psh-manual-solver/: Cargo.toml
psh-manual-solver/src/: main.rs
psh-solver/: Cargo.toml
psh-solver/src/: main.rs
psh-validator/: Cargo.toml
psh-validator/src/: main.rs
scripts/: run_all_oka_solvers.sh
similarity/src/: main.rs
src/: main.rs
tanakh-solver/: Cargo.toml
tanakh-solver/src/: api.rs  lib.rs  main.rs  solver.rs
upsolve-oka-solver/: Cargo.toml  opt.py  params.json  params2.json  params_manual.json  params_retry.json
upsolve-oka-solver/src/: main.rs  output.rs  params.rs  pretty.rs  solver.rs  solver2.rs
upsolve-oka-solver/src/solver3/: etx_problem.rs  ext_problem.rs  mini_solver.rs  mod.rs  solver.rs  types.rs
wasm/: Cargo.toml
wasm/src/: annealing.rs  lib.rs
(+104 files in other folders)
