[workspace]
members = [
  "api",
  "chain-solver",
  "chir-solver",
  "common",
  "evaluator",
  "greedy-solver",
  "fuqinho-solver",
  "hungarian-solver",
  "sandbox/hello",
  "sandbox/lifegame",
  "sandbox/lifegame-wasm",
  "oka-solver",
  "psh-fixup-volumes",
  "psh-manual-solver",
  "psh-solver",
  "psh-validator",
  "tanakh-solver",
  "wasm",
]

[profile.release]
debug = true
