[workspace]
members = [
  "api",
  "chain-solver",
  "chir-solver",
  "common",
  "dp-solver",
  "evaluator",
  "greedy-solver",
  "fuqinho-solver",
  "hungarian-solver",
  "nya-manual-annealer",
  "sandbox/hello",
  "sandbox/lifegame",
  "sandbox/lifegame-wasm",
  "oka-solver",
  "psh-fixup-volumes",
  "psh-manual-solver",
  "psh-solver",
  "psh-validator",
  "tanakh-solver",
  "wasm",
]
