[package]
name = "chir-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "*"
clap = { version = "4.3.11", features = ["derive"] }
serde_json = "*"
rand = "*"
log = "*"
env_logger = "*"
euclid = "*"
indexmap = "*"
lyon_geom = "*"
reqwest = "*"