[package]
name = "dp-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.3.0"
anyhow = "1.0.71"
argopt = "0.3.0"
common = { path = "../common" }
euclid = "0.22.9"
lyon_geom = "1.0.4"
