[package]
name = "tanakh-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
saru = { git = "https://github.com/tanakh/saru" }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
