[package]
name = "tanakh-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

anyhow = "1.0.71"
argopt = "0.3.0"
euclid = "0.22.9"
lyon_geom = "1.0.4"
parry2d-f64 = { version = "0.13.4", features = ["simd-stable"] }
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
    "small_rng",
] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
saru = { path = "../third_party/saru" }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
