[package]
name = "upsolve-oka-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

anyhow = "*"
argopt = "*"

rand = { version = "*", default-features = false, features = ["small_rng"] }
lyon_geom = "*"

pprof = { version = "*", features = ["flamegraph", "protobuf-codec"] }
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
