[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
euclid = "0.22.9"
lyon_geom = "1.0.4"
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "small_rng"] }
saru = { path = "../third_party/saru" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
wasm-bindgen = "0.2"
