[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
common = { path = "../common" }
console_error_panic_hook = "0.1.7"
euclid = "0.22.9"
lyon_geom = "1.0.4"
saru = { path = "../third_party/saru" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tanakh-solver = { path = "../tanakh-solver" }
thiserror = "*"
wasm-bindgen = "0.2"
